--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -35,11 +35,11 @@ Map:
     ClearMarkers: Clear markers
   Unreachable: Unreachable by transit
 Dock:
-  FormHeading: Show travel times …
+  FormHeading: Travel times …
   LocationLabel: from
   NetworkLabel: when
   Favorites: Saved recommendations
-  FeedbackLink: ECHO needs your feedback
+  FeedbackLink: We would like your feedback
   GoBackToRecommendations: Back to your recommendations
   GoBackToFavorites: Back to saved recommendations
   GoPreviousPage: Go back
@@ -68,7 +68,7 @@ NeighborhoodDetails:
   GoSection8SearchLink: GoSection8
   HotpadsSearchLink: Hotpads
   MetroHousingLink: Metro Housing
-  MaxRent: Est. max rent
+  MaxRent: With your voucher, you can receive up to
   ModeSummary: via
   MoreSearchToolsLinksHeading: More search tools
   RentEstimatorLink: Rent Estimator
@@ -80,7 +80,7 @@ NeighborhoodDetails:
   ZillowSearchLink: Zillow
 NeighborhoodInfo:
   SchoolChoice: School choice options »
-  EducationCategory: Schools
+  EducationCategory: School quality
   ExpandedChoice: An Expanded Choice Community
   Population: Population
   RentalUnits: Apartment rentals
@@ -243,11 +243,11 @@ Map:
     ClearMarkers: Clear markers
   Unreachable: Unreachable by transit
 Dock:
-  FormHeading: Show travel times …
+  FormHeading: Travel times …
   LocationLabel: from
   NetworkLabel: when
   Favorites: Saved recommendations
-  FeedbackLink: ECHO needs your feedback
+  FeedbackLink: We would like your feedback
   GoBackToRecommendations: Back to your recommendations
   GoBackToFavorites: Back to saved recommendations
   GoPreviousPage: Go back
@@ -272,7 +272,7 @@ NeighborhoodDetails:
   GoSection8SearchLink: GoSection8
   HotpadsSearchLink: Hotpads
   MetroHousingLink: Metro Housing
-  MaxRent: Est. max rent
+  MaxRent: With your voucher, you can receive up to
   ModeSummary: via
   MoreSearchToolsLinksHeading: More search tools
   RentEstimatorLink: Rent Estimator
@@ -284,7 +284,7 @@ NeighborhoodDetails:
   ZillowSearchLink: Zillow
 NeighborhoodInfo:
   SchoolChoice: School choice options »
-  EducationCategory: Schools
+  EducationCategory: School quality
   ExpandedChoice: An Expanded Choice Community
   Population: Population
   RentalUnits: Apartment rentals
@@ -446,11 +446,11 @@ Map:
     ClearMarkers: Clear markers
   Unreachable: Unreachable by transit
 Dock:
-  FormHeading: Show travel times …
+  FormHeading: Travel times …
   LocationLabel: from
   NetworkLabel: when
   Favorites: Saved recommendations
-  FeedbackLink: ECHO needs your feedback
+  FeedbackLink: We would like your feedback
   GoBackToRecommendations: Back to your recommendations
   GoBackToFavorites: Back to saved recommendations
   GoPreviousPage: Go back
@@ -475,7 +475,7 @@ NeighborhoodDetails:
   GoSection8SearchLink: GoSection8
   HotpadsSearchLink: Hotpads
   MetroHousingLink: Metro Housing
-  MaxRent: Est. max rent
+  MaxRent: With your voucher, you can receive up to
   ModeSummary: via
   MoreSearchToolsLinksHeading: More search tools
   RentEstimatorLink: Rent Estimator
@@ -487,7 +487,7 @@ NeighborhoodDetails:
   ZillowSearchLink: Zillow
 NeighborhoodInfo:
   SchoolChoice: School choice options »
-  EducationCategory: Schools
+  EducationCategory: School quality
   ExpandedChoice: An Expanded Choice Community
   Population: Population
   RentalUnits: Apartment rentals
