--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -68,7 +68,7 @@ NeighborhoodDetails:
   GoSection8SearchLink: GoSection8
   HotpadsSearchLink: Hotpads
   MetroHousingLink: Metro Housing
-  MaxRent: You can receive up to
+  MaxRent: Est. max rent
   ModeSummary: via
   MoreSearchToolsLinksHeading: More search tools
   RentEstimatorLink: Rent Estimator
@@ -272,7 +272,7 @@ NeighborhoodDetails:
   GoSection8SearchLink: GoSection8
   HotpadsSearchLink: Hotpads
   MetroHousingLink: Metro Housing
-  MaxRent: You can receive up to
+  MaxRent: Est. max rent
   ModeSummary: via
   MoreSearchToolsLinksHeading: More search tools
   RentEstimatorLink: Rent Estimator
@@ -475,7 +475,7 @@ NeighborhoodDetails:
   GoSection8SearchLink: GoSection8
   HotpadsSearchLink: Hotpads
   MetroHousingLink: Metro Housing
-  MaxRent: You can receive up to
+  MaxRent: Est. max rent
   ModeSummary: via
   MoreSearchToolsLinksHeading: More search tools
   RentEstimatorLink: Rent Estimator
