--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -83,7 +83,7 @@ NeighborhoodInfo:
   EducationCategory: School quality
   ExpandedChoice: An Expanded Choice Community
   Population: Population
-  RentalUnits: Apartment rentals
+  RentalUnits: Apartment availability
   Score: Overall score
   ViolentCrime: Public safety
 PageNotFound: Oops! There is no page at
@@ -287,7 +287,7 @@ NeighborhoodInfo:
   EducationCategory: School quality
   ExpandedChoice: An Expanded Choice Community
   Population: Population
-  RentalUnits: Apartment rentals
+  RentalUnits: Apartment availability
   Score: Overall score
   ViolentCrime: Public safety
 PageNotFound: Oops! There is no page at
@@ -490,7 +490,7 @@ NeighborhoodInfo:
   EducationCategory: School quality
   ExpandedChoice: An Expanded Choice Community
   Population: Population
-  RentalUnits: Apartment rentals
+  RentalUnits: Apartment availability
   Score: Overall score
   ViolentCrime: Public safety
 PageNotFound: Oops! There is no page at
