--- a/taui/package.json
+++ b/taui/package.json
@@ -69,6 +69,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "~16.13.0",
     "react-ga": "~2.7.0",
+    "react-icons": "^3.10.0",
     "react-leaflet": "~1.9.1",
     "react-leaflet-vectorgrid": "~2.2.1",
     "react-loader-spinner": "^3.1.14",
