--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.backup
+.DS_Store
 
 # Logs
 logs
@@ -73,19 +74,3 @@ typings/
 
 # Amplify configs for the frontend app
 taui/src/aws-exports.js
-
-#amplify
-amplify/\#current-cloud-backend
-amplify/.config/local-*
-amplify/mock-data
-amplify/backend/amplify-meta.json
-amplify/backend/awscloudformation
-build/
-dist/
-node_modules/
-aws-exports.js
-awsconfiguration.json
-amplifyconfiguration.json
-amplify-build-config.json
-amplify-gradle-config.json
-amplifytools.xcconfig
