--- a/taui/configurations/default/settings.yml
+++ b/taui/configurations/default/settings.yml
@@ -4,6 +4,8 @@ entries:
   - config.json:assets/config.json
   - neighborhoods.json:assets/neighborhoods.json
   - neighborhood_bounds.json:assets/neighborhood_bounds.json
+  - src/img/echo_combined_logo_fullcolor.svg:assets/echo_combined_logo_fullcolor.svg
+  - src/img/echo_combined_logo_STACKED_fullcolor.svg:assets/echo_combined_logo_STACKED_fullcolor.svg
 env: development
 flyle: true
 s3bucket: taui
