--- a/taui/package.json
+++ b/taui/package.json
@@ -61,6 +61,7 @@
     "react-i18next": "^11.13.0",
     "react-leaflet": "~1.9.1",
     "react-leaflet-vectorgrid": "~2.2.1",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "~5.1.2",
     "react-router": "~5.1.2",
     "react-router-dom": "~5.1.2",
