--- a/taui/package.json
+++ b/taui/package.json
@@ -48,6 +48,7 @@
     "debug": "~4.1.1",
     "focus-visible": "~5.0.2",
     "geojson-bbox": "~0.0.0",
+    "i18next": "^21.4.0",
     "isomorphic-fetch": "~2.2.1",
     "jsolines": "~2.1.2",
     "leaflet": "~1.5.1",
@@ -57,6 +58,7 @@
     "react": "~16.13.0",
     "react-dom": "~16.13.0",
     "react-ga": "~2.7.0",
+    "react-i18next": "^11.13.0",
     "react-leaflet": "~1.9.1",
     "react-leaflet-vectorgrid": "~2.2.1",
     "react-redux": "~5.1.2",
