--- a/taui/package.json
+++ b/taui/package.json
@@ -55,6 +55,7 @@
     "lodash": "~4.17.15",
     "logrocket": "^1.0.6",
     "logrocket-react": "~4.0.1",
+    "nuka-carousel": "^4.8.3",
     "react": "~16.13.0",
     "react-dom": "~16.13.0",
     "react-ga": "~2.7.0",
