Add Django as backend API to development env:
- update docker-compose to include django and
  database services
- add STRTA scripts for local development
- bootstrap Django to be used as API backend with
  necessary dependencies, middleware, db config
- update start command in the package.json for frontend
  so that it can proxy the django API locally
- update README for the STRTA section
- update gitignore to ignore byte-compiled python
  files and static files from Django

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,9 @@ typings/
 
 # Amplify configs for the frontend app
 taui/src/aws-exports.js
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+src/backend/static
