--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,9 +1,10 @@
-version: '3'
+version: '2.1'
 services:
   taui:
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
+
   terraform:
     image: quay.io/azavea/terraform:0.11.11
     volumes:
@@ -17,6 +18,7 @@ services:
       - ECHOLOCATOR_SITE_BUCKET=${ECHOLOCATOR_SITE_BUCKET:-echo-locator-staging-site-us-east-1}
     working_dir: /usr/local/src
     entrypoint: bash
+
   amplify:
     build: ./deployment/amplify
     volumes:
@@ -24,3 +26,6 @@ services:
       - $HOME/.aws:/root/.aws:ro
     working_dir: /usr/local/src
     entrypoint: bash
+
+  django:
+    image: "echolocator:${GIT_COMMIT:-latest}"
