--- a/taui/package.json
+++ b/taui/package.json
@@ -14,7 +14,7 @@
     "prestart": "yarn",
     "pretest": "yarn",
     "semantic-release": "semantic-release",
-    "start": "mastarm build --serve --watch",
+    "start": "mastarm build --serve --watch --proxy http://django:8085",
     "test": "mastarm lint-js src --ignore-path src/.eslintignore && mastarm lint-styles --config .stylelintrc && mastarm lint-messages && mastarm build"
   },
   "repository": {
