Add the github cibuild and just test a terraform plan
This does not do an apply until I'm sure it works correctly.

TODO cibuild disabled for speed

I can't enable it to only happen in develop on a PR :)

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -12,6 +12,8 @@ services:
       - $HOME/.aws:/root/.aws:ro
     environment:
       - AWS_PROFILE=echo-locator
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
       - GIT_COMMIT=${GIT_COMMIT:-latest}
       - ECHOLOCATOR_DEBUG=1
       - ECHOLOCATOR_SETTINGS_BUCKET=${ECHOLOCATOR_SETTINGS_BUCKET:-echo-locator-staging-config-us-east-1}
