--- a/.gitignore
+++ b/.gitignore
@@ -69,8 +69,9 @@ typings/
 *.tfvars
 *.tfplan
 
-# Terraform module directory
+# Terraform
 .terraform/
+.terraform.lock.hcl
 
 # Amplify configs for the frontend app
 taui/src/aws-exports.js
