--- a/taui/package.json
+++ b/taui/package.json
@@ -32,16 +32,11 @@
   },
   "homepage": "https://github.com/azavea/echo-locator",
   "dependencies": {
-    "@aws-amplify/api": "~1.3.3",
-    "@aws-amplify/auth": "~1.6.3",
-    "@aws-amplify/core": "~1.3.3",
-    "@aws-amplify/storage": "~1.3.3",
-    "@aws-amplify/ui": "~1.1.4",
     "@conveyal/gridualizer": "~2.1.0",
     "@conveyal/lonlat": "~1.4.0",
     "@conveyal/woonerf": "~4.2.1",
     "@mapbox/polyline": "~1.1.0",
-    "aws-amplify-react": "~2.3.13",
+    "axios": "0.21.1",
     "babel-plugin-css-modules-transform": "~1.6.2",
     "d3-scale": "~2.2.2",
     "date-fns": "~1.30.1",
