--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - DJANGO_ENV=Development
       - DJANGO_SECRET_KEY=secret
       - DJANGO_LOG_LEVEL=INFO
+      - AWS_PROFILE
     build:
       context: ./
       dockerfile: ./src/backend/Dockerfile
