--- a/taui/package.json
+++ b/taui/package.json
@@ -46,6 +46,7 @@
     "i18next": "^21.4.0",
     "isomorphic-fetch": "~2.2.1",
     "jsolines": "~2.1.2",
+    "js-cookie": "3.0.1",
     "leaflet": "~1.5.1",
     "lodash": "~4.17.15",
     "logrocket": "^1.0.6",
