Change from latest to GIT_COMMIT
This is a small change to stop relying on the latest docker image tag
and just have terraform use actual git commit shas.

Resolves: #476

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -7,7 +7,7 @@ services:
       - $HOME/.aws:/root/.aws:ro
     environment:
       - AWS_PROFILE=echo-locator
-      - GIT_COMMIT=${GIT_COMMIT:-latest}
+      - GIT_COMMIT=${GIT_COMMIT}
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - ECHOLOCATOR_DEBUG=1
@@ -25,4 +25,4 @@ services:
     entrypoint: bash
 
   django:
-    image: "echolocator:${GIT_COMMIT:-latest}"
+    image: "echolocator:${GIT_COMMIT}"
