--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -3,10 +3,13 @@ FROM quay.io/azavea/django:3.2-python3.10-slim
 RUN mkdir -p /usr/local/src/backend
 WORKDIR /usr/local/src/backend
 
-COPY requirements.txt /usr/local/src/backend/
+COPY /src/backend/requirements.txt /usr/local/src/backend/
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /usr/local/src/backend
+COPY ./src/backend /usr/local/src/backend
+
+COPY ./taui/assets*/ /usr/local/src/backend/static/assets
+COPY ./taui/index.html /usr/local/src/backend/static/index.html
 
 CMD ["-b :8085", \
     "--workers=2", \
