Move yarn build outside of Dockerfile

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -8,7 +8,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./src/backend /usr/local/src/backend
 
-COPY ./taui/assets*/ /usr/local/src/backend/static/assets
+COPY ./taui/assets/ /usr/local/src/backend/static/assets
 COPY ./taui/index.html /usr/local/src/backend/static/index.html
 
 CMD ["-b :8085", \
