--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: "us-east-1"
 
+      - run: ./scripts/bootstrap
+        if: github.ref != 'refs/heads/master'
+        env:
+          ECHOLOCATOR_SETTINGS_BUCKET: echo-locator-stgdjango-config-us-east-1
+
       - run: ./scripts/cibuild
 
       ################################
