--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
       - DJANGO_SECRET_KEY=secret
       - DJANGO_LOG_LEVEL=INFO
     build:
-      context: ./src/backend
-      dockerfile: Dockerfile
+      context: ./
+      dockerfile: ./src/backend/Dockerfile
     volumes:
       - ./src/backend:/usr/local/src/backend
       - ./src/frontend/build:/usr/local/src/backend/static/
