--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,11 +40,12 @@ jobs:
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           IGNORE_GITIGNORED_FILES: true
-          FILTER_REGEX_INCLUDE: src/backend/
+          FILTER_REGEX_INCLUDE: src/backend/|deployment/terraform-django/
           FILTER_REGEX_EXCLUDE: .*(migrations/*|manage.py).*
           LINTER_RULES_PATH: /
           PYTHON_BLACK_CONFIG_FILE: src/backend/pyproject.toml
           PYTHON_FLAKE8_CONFIG_FILE: src/backend/setup.cfg
+          VALIDATE_TERRAFORM_TERRASCAN: false
           VALIDATE_GITLEAKS: false
           VALIDATE_JSCPD: false
           VALIDATE_PYTHON_MYPY: false
