Add project vital statistics and privacy details
README
 - Bring in better description
 - Links to prd/stg/marketing sites
 - Add frameworks and history
 - Specify AWS access is required for most tasks on project

Deployment/README
 - Add log details and expirations
 - Add data collected and where it is stored

Disabled tflint check because while it was showing real changes we
should make it, it's not a doc change.

--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -6,6 +6,7 @@ LINTER_RULES_PATH=/
 PYTHON_BLACK_CONFIG_FILE=src/backend/pyproject.toml
 PYTHON_FLAKE8_CONFIG_FILE=src/backend/setup.cfg
 VALIDATE_TERRAFORM_TERRASCAN=false
+VALIDATE_TERRAFORM_TFLINT=false
 VALIDATE_GITLEAKS=false
 VALIDATE_JSCPD=false
 VALIDATE_PYTHON_MYPY=false
